# ear_ring

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  app.json  console.txt  copilot-session-26a013dd-9e0e-4011-9c1c-e3f28cf0bfa9.md  copilot-session-f7453182-9b30-4779-8f25-11b7b15b4fbe.md  diatonic.md  inst.md  justfile  package-lock.json  package.json  tsconfig.json  ui.xml  ui2.xml  uireorg.md  vetter.md
.github/: copilot-instructions.md
.github/workflows/: SECRETS.md  cd.yml
android/: gradle.properties  settings.gradle
android/app/: build.gradle  earring-upload.jks
app/: _layout.tsx  exercise.tsx  index.tsx  progress.tsx  results.tsx  setup.tsx
desktop/: index.html  package-lock.json  package.json  vite.config.ts
desktop/public/: accidental_meta.json
desktop/src/: App.tsx  audioWorklet.ts  music.ts  styles.css  types.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: main.rs
docs/: melody-library-plan.md  melody-manager.md
icon/: gen_accidental_symbols.js  gen_clef.js  gen_desktop_clef.js  generate.js
ios/: .xcode.env  ExportOptions.plist  Podfile  build-rust.sh
ios/earring/: AppDelegate.swift  AudioCapture.swift  AudioPlayback.swift  ContentView.swift  EarRingApp.swift  (+7 more)
ios/earring.xcodeproj/: project.pbxproj
melody-manager/: index.html  package-lock.json  package.json  vite.config.ts
melody-manager/src-tauri/: Cargo.toml  tauri.conf.json
melody-manager/src-tauri/src/: main.rs
rust/: Cargo.toml  cbindgen.toml
rust_wasm/: Cargo.toml
scripts/: package-lock.json  package.json  publish_android.js
(+98 files in other folders)
