[package]
name = "ear-ring-desktop"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = ["shell-open", "http-all"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ear_ring_core = { path = "../../rust" }
